cabal-version:      2.4
name:               lambda
version:            0.1.0.0

author:             Dreary Lisper
maintainer:         drearylisper@gmail.com

executable lambda
    main-is:          Main.hs
    build-depends:    lambda, base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

library
    exposed-modules:  Lambda.Parsing, Lambda.Evaluation, Lambda.Types, Lambda.Repl
    build-depends:    containers, repline >= 0.4.0.0, haskeline >= 0.8.1.3, mtl, base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite test-lambda
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    containers, lambda, hspec, base ^>=4.14.3.0
    hs-source-dirs:   tests
    default-language: Haskell2010
